# easy_bag_recorder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
action/: Record.action
include/easy_bag_recorder/: easy_bag_recorder.h
src/: easy_bag_recorder.cpp
src/easy_bag_recorder/: __init__.py
