<?xml version="1.0"?>
<package>
  <name>easy_bag_recorder</name>
  <version>0.0.1</version>
  <description>Easy bag recorder, simple action server for recording rosbags. Based on nodelet_rosbag by Esteve Fernandez https://github.com/osrf/nodelet_rosbag</description>
  <maintainer email="robin@additiveautomations.com">Robin Edwards</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
</package>
