<?xml version="1.0"?>
<package format="2">
  <name>easy_bag_recorder</name>
  <version>0.0.1</version>
  <description>Easy bag recorder, simple action server for recording rosbags. Based on nodelet_rosbag by Esteve Fernandez https://github.com/osrf/nodelet_rosbag</description>
  <maintainer email="robin@additiveautomations.com">Robin Edwards</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>clang-tidy</build_depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>topic_tools</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>rospy</exec_depend>
</package>
